# nebula

./: .gitignore  LICENSE  README.md  deno.json  deps.ts  package.json
common/: contract.types.ts  mod.ts  types.ts  utils.test.ts  utils.ts
contract/: .gitignore  README.md  build.ts  deno.json  mod.ts
contract/nebula/: README.md  package-lock.json  package.json
contract/nebula/esm/: deps.js
contract/nebula/esm/common/: contract.types.js  utils.js
contract/nebula/esm/contract/src/: config.js  offchain.js
contract/nebula/esm/contract/src/ghc/: scripts.js
contract/nebula/src/: deps.ts
contract/nebula/src/common/: contract.types.ts  utils.ts
contract/nebula/src/contract/src/: config.ts  offchain.ts  types.ts
contract/nebula/src/contract/src/ghc/: scripts.js
contract/nebula/types/: deps.d.ts
contract/nebula/types/common/: contract.types.d.ts  utils.d.ts
contract/nebula/types/contract/src/: offchain.d.ts  types.d.ts
contract/nebula/types/contract/src/ghc/: scripts.d.ts
contract/src/: config.ts  offchain.ts  onchain.hs  types.ts  utils.ts
contract/src/contract/: .gitignore  README.md  aiken.toml
contract/src/contract/validators/: nebula.ak  spend.ak
contract/src/contract_aiken/: aiken.toml
contract/src/contract_aiken/assets/trade/spend/: mainnet.addr  payment_script.json  script.cbor  (+1 more)
contract/src/contract_aiken/lib/aiken/: assoc_list.ak  bytearray.ak  context.ak  hash.ak  interval.ak  list.ak  map.ak  math.ak  option.ak  string.ak  transaction.ak
contract/src/contract_aiken/validators/: trade.ak
contract/src/ghc/: README.md  cabal.project  contract.cabal  scripts.json
contract/src/ghc/app/: Main.hs
contract/src/nebula/: README.md  aiken.toml  plutus.json  plutus.ts
contract/src/nebula/lib/aiken/: bytearray.ak  dict.ak  hash.ak  interval.ak  list.ak  math.ak  option.ak  string.ak  transaction.ak
contract/src/nebula/lib/nebula/: constants.ak  fixture.ak  types.ak  utils.ak  validation.ak
contract/src/nebula/validators/: nebula.ak  oneshot.ak
contract/tests/: mod.test.ts
watcher/: .gitignore  README.md  config.ts  deno.json  querier.ts
watcher/src/: db.ts  flags.ts  mod.ts  querier.ts  types.ts  utils.ts  watcher.ts
(+4 files in other folders)
